--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     /* تعريف الخط */
     @font-face {
   font-family: 'LAXR';
-  src: url('./fonts/LAXR.woff2') format('woff2');
+  src: url('LAXR.woff2') format('woff2');
   font-display: swap;
 }
 
@@ -351,7 +351,7 @@
             <!-- Logo -->
             <div class="flex items-center gap-3">
                 <div class="w-12 h-12 flex items-center justify-center bg-yellow-400 rounded-full">
-                    <img src="logo.jpeg" alt="لوجو صيدلية دكتور محمد عصمت" class="w-full h-full object-cover">
+                    <img src="logo.png" alt="لوجو صيدلية دكتور محمد عصمت" class="w-full h-full object-cover">
                 </div>
                 <div>
                     <h1 class="text-2xl font-bold">دكتور محمد عصمت</h1>
@@ -897,7 +897,7 @@
                 </div>
                 <div class="text-center">
                     <div class="relative inline-block">
-                        <img src="Dr.Esmat.jpeg" alt="دكتور محمد عصمت" class="w-64 h-64 object-cover rounded-full">
+                        <img src="Dr.Esmat.png" alt="دكتور محمد عصمت" class="w-64 h-64 object-cover rounded-full">
                         <div class="absolute -bottom-4 -right-4 bg-yellow-400 text-primary rounded-full p-4">
                             <i class="ri-user-heart-fill text-2xl"></i>
                         </div>
@@ -923,7 +923,7 @@
                 <div>
                     <div class="flex items-center gap-3 mb-6">
                         <div class="w-12 h-12 flex items-center justify-center bg-yellow-400 rounded-full">
-                              <img src="logo.jpeg" alt="لوجو صيدلية دكتور محمد عصمت" class="w-full h-full object-cover">
+                              <img src="logo.png" alt="لوجو صيدلية دكتور محمد عصمت" class="w-full h-full object-cover">
                         </div>
                         <div>
                             <h3 class="text-xl font-bold">دكتور محمد عصمت</h3>
@@ -1184,3 +1184,4 @@ function prev() {
 <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
 
 </body></html>
+
