--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     /* تعريف الخط */
     @font-face {
   font-family: 'LAXR';
-  src: url('LAXR.woff2') format('woff2');
+  src: url('./LAXR.woff2') format('woff2');
   font-display: swap;
 }
 
@@ -414,7 +414,7 @@
 
     <!-- Hero Section -->
     <section class="hero-bg relative overflow-hidden" 
-    style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), 
+    style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
     url('https://readdy.ai/api/search-image?query=Modern%20pharmacy%20interior%20with%20clean%20white%20shelves%20filled%20with%20medicines%2C%20bright%20lighting%2C%20professional%20healthcare%20environment%2C%20teal%20and%20white%20color%20scheme%2C%20spacious%20layout%2C%20contemporary%20design%2C%20medical%20equipment%20visible%2C%20welcoming%20atmosphere%2C%20high-end%20pharmacy%20setting&amp;width=1920&amp;height=800&amp;seq=hero001&amp;orientation=landscape'); 
     background-size: cover; 
     background-position: center;">
@@ -1184,4 +1184,5 @@ function prev() {
 <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
 
 </body></html>
+
 
